# FFT

./: .gitignore  CODECOV.md  DEVCONTAINER.md  QUICKSTART.md  README.md  benchmark.sh  codecov.yml  run_tests.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  validate.sh
.github/workflows/: auto-delete-branch.yml  ci.yml
android/: .gitignore  ARCHITECTURE.md  BUILD.md  PROJECT_SUMMARY.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  fft_jni.cpp
android/app/src/main/java/com/flaccidfacade/fftvisualizer/: MainActivity.kt  PerformanceChartActivity.kt
android/app/src/main/java/com/flaccidfacade/fftvisualizer/audio/: AudioCaptureManager.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  activity_performance_chart.xml  fft_visualizer_cell.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
cpp/: Makefile  README.md  fft  fft.cpp  fft.h  fft_impl.cpp  test_fft  test_fft.cpp
java/: FFT.java  README.md  TestFFT.java  build.sh
javascript/: README.md  fft.js  package-lock.json  package.json  test_fft.js
python/: README.md  fft.py  requirements.txt  test_fft.py
rust/: README.md
rust/src/: lib.rs  main.rs
typescript/: README.md  fft.d.ts  fft.js  fft.ts  package-lock.json  package.json  test_fft.d.ts  test_fft.js  test_fft.ts  tsconfig.json
(+9 files in other folders)
